--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 
 .game{
     width: 900px;
-    height: 650px;
+    min-height: 650px;
     display: flex;
     flex-direction: column;
     align-items: center;
