--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: var(--bone);
     box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
     padding: 20px;
