--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,11 @@ body {
 
 .game{
     width: 900px;
-    min-height: 650px;
+    height: 650px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: var(--bone);
     box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
     padding: 20px;
