--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-    src: url(assets/fonts/Miracle\ World.otf) format(opentype) ;
+    src: url(../fonts/Miracle\ World.otf) format(opentype) ;
     font-family: Miracle;
 }
 
@@ -58,15 +58,6 @@ body {
     width: 100%;
     box-shadow: 5px 5px 0 1px rgba(176,169,150,1);
 }
-
-/*Si le logo n'est pas l'image avec glitch
-h1 {
-    font-family: Miracle;
-    font-size: 50px;
-    font-weight: 600;
-    letter-spacing: 5px;
-    color: var(--black-olive);
-}*/
 
 h2, p {
     font-family: Open Sans;
