--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,11 +6,11 @@
     --blanc: white;
     --noir: black;
     --gris: grey;
+    --rouge: rgb(199, 59, 16);
 }
 
 body {
     height: 100vh;
-    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,12 +49,25 @@ body {
     justify-content: space-around;
 }
 
+#situationVideo{
+    width: 100%;
+    box-shadow: 5px 5px 0 1px rgba(176,169,150,1);
+}
+
+.video{
+    width: 550px;
+}
+
 .situation{
     width: 100%;
     box-shadow: 5px 5px 0 1px rgba(176,169,150,1);
 }
 
-h2, p {
+.hidden{
+    display: none;
+}
+
+h2, p, label {
     font-family: Open Sans;
     font-weight: 500;
     color: var(--black-olive);
@@ -84,3 +97,76 @@ button:hover {
     color: var(--bone);
     box-shadow: inset 400px 0 0 0 var(--black-olive);
 }
+
+/*Style checkbox pris ici: pris sur ce site: https://getcssscan.com/css-checkboxes-examples*/
+
+.checkbox-wrapper-32 {
+    --size: 20px;
+    --border-size: 2px;
+
+    position: relative;
+  }
+
+  .checkbox-wrapper-32 *,
+  .checkbox-wrapper-32 *::after,
+  .checkbox-wrapper-32 *::before {
+    box-sizing: border-box;
+  }
+
+  .checkbox-wrapper-32 input[type="checkbox"] {
+    display: inline-block;
+    vertical-align: middle;
+    opacity: 0;
+  }
+
+  .checkbox-wrapper-32 input[type="checkbox"],
+  .checkbox-wrapper-32 label::before {
+    width: var(--size);
+    height: var(--size);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .checkbox-wrapper-32 label {
+    display: inline-block;
+    position: relative;
+    padding: 0 0 0 calc(var(--size) + 7px);
+  }
+
+  .checkbox-wrapper-32 label::before {
+    content: '';
+    border: var(--border-size) solid var(--black-olive);
+    opacity: 0.7;
+    transition: opacity 0.3s;
+  }
+
+  .checkbox-wrapper-32 input[type="checkbox"]:checked + label::before {
+    opacity: 1;
+  }
+
+  .checkbox-wrapper-32 svg {
+    position: absolute;
+    top: calc(50% + var(--border-size));
+    left: var(--border-size);
+    width: calc(var(--size) - (var(--border-size) * 2));
+    height: calc(var(--size) - (var(--border-size) * 2));
+    margin-top: calc(var(--size) / -2);
+    pointer-events: none;
+  }
+
+  .checkbox-wrapper-32 svg path {
+    stroke-width: 0;
+    fill: none;
+    transition: stroke-dashoffset 0.2s ease-in 0s;
+  }
+
+  .checkbox-wrapper-32 svg path + path {
+    transition: stroke-dashoffset 0.2s ease-out 0.2s;
+  }
+
+  .checkbox-wrapper-32 input[type="checkbox"]:checked ~ svg path {
+    stroke-dashoffset: 0;
+    stroke-width: calc(var(--size) / 2);
+  }
