--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  src: url("../fonts/Miracle\ World.otf") format('opentype');
+  font-family: "Miracle";
+}
+
 :root{
     --dun: #afaa96;
     --bone: #D2CCB4;
@@ -53,12 +58,12 @@
 .button-debut{
   cursor: pointer;
   font-family: Open Sans;
-  font-weight: 600;
+  font-weight: 550;
   font-size: 15px;
 
   background-color: var(--grisFonce);
   border: none;
-  color: var(--gris);
+  color: var(--blanc);
   padding: 8px;
   padding-right: 20%;
   padding-left: 10px;
@@ -147,6 +152,21 @@
     display: none;
 }
 
+h1{
+  color: var(--gris);
+  font-family: Miracle;
+  letter-spacing: 20px;
+}
+
+.logo-all{
+  color: var(--black-olive);
+}
+
+.environment{
+  height: 30px;
+  margin-bottom: 25px;
+}
+
 h2, p, label {
     font-family: Open Sans;
     font-weight: 500;
@@ -196,8 +216,7 @@ button:hover {
     border: none;
     color: var(--black-olive);
     padding: 8px 15px;
-    margin-top: 10px;
-    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .reset:hover{
@@ -214,78 +233,9 @@ button:hover {
   align-items: flex-start;
 }
 
-/*Style checkbox pris ici: pris sur ce site: https://getcssscan.com/css-checkboxes-examples*/
-
-/*.checkbox-wrapper-32 {
-    --size: 20px;
-    --border-size: 2px;
-
-    position: relative;
-  }
-
-  .checkbox-wrapper-32 *,
-  .checkbox-wrapper-32 *::after,
-  .checkbox-wrapper-32 *::before {
-    box-sizing: border-box;
-  }
-
-  .checkbox-wrapper-32 input[type="checkbox"] {
-    display: inline-block;
-    vertical-align: middle;
-    opacity: 0;
-  }
-
-  .checkbox-wrapper-32 input[type="checkbox"],
-  .checkbox-wrapper-32 label::before {
-    width: var(--size);
-    height: var(--size);
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-  .checkbox-wrapper-32 label {
-    display: inline-block;
-    position: relative;
-    padding: 0 0 0 calc(var(--size) + 7px);
-  }
-
-  .checkbox-wrapper-32 label::before {
-    content: '';
-    border: var(--border-size) solid var(--black-olive);
-    opacity: 0.7;
-    transition: opacity 0.3s;
-  }
-
-  .checkbox-wrapper-32 input[type="checkbox"]:checked + label::before {
-    opacity: 1;
-  }
-
-  .checkbox-wrapper-32 svg {
-    position: absolute;
-    top: calc(50% + var(--border-size));
-    left: var(--border-size);
-    width: calc(var(--size) - (var(--border-size) * 2));
-    height: calc(var(--size) - (var(--border-size) * 2));
-    margin-top: calc(var(--size) / -2);
-    pointer-events: none;
-  }
-
-  .checkbox-wrapper-32 svg path {
-    stroke-width: 0;
-    fill: none;
-    transition: stroke-dashoffset 0.2s ease-in 0s;
-  }
-
-  .checkbox-wrapper-32 svg path + path {
-    transition: stroke-dashoffset 0.2s ease-out 0.2s;
-  }
-
-  .checkbox-wrapper-32 input[type="checkbox"]:checked ~ svg path {
-    stroke-dashoffset: 0;
-    stroke-width: calc(var(--size) / 2);
-  }*/
+.checkbox{
+  margin-top: 10px;
+}
 
   /*code pour le grain trouvé ici https://codepen.io/iceable/pen/yLBrZOd*/
   .bg {
@@ -316,4 +266,8 @@ button:hover {
       80% { transform: translate(-15%,0) }
       90% { transform: translate(10%,5%) }
       100% { transform: translate(5%,0) }
+  }
+
+  @media screen {
+    
   }
