--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,8 +29,8 @@
   }
 
 .game-debut{
-    max-width: 43%;
-    max-height: 90%;
+    max-width: 800px;
+    max-height: 95%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,8 +104,8 @@
 }
 
 .game{
-    max-width: 43%;
-    max-height: 90%;
+    max-width: 800px;
+    max-height: 95%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -268,16 +268,16 @@ button:hover {
       100% { transform: translate(5%,0) }
   }
 
-  @media screen and (max-width: 840px) {
+  @media screen and (max-width: 768px) {
 
     .game-debut{
       max-width: 90%;
-      max-height: 100%;
+      min-height: 100%;
     }
 
     .game{
       max-width: 90%;
-      max-height: 100%; 
+      min-height: 100%; 
     }
 
     h1{
